@@ -6,6 +6,10 @@
     See http://www.dinkumware.com/vc_fixes.html <xtree> issue with shared
     std::map in dll. As a work-around the map has been replaced by a vector.
 
+  * src/DllPlugInTester/*.cpp: bug #941625, string literal using char *
+    instead of const char *. Patch contributed by Curt Arnold has been
+    applied.
+
 2004-06-17 Baptiste Lepilleur <gaiacrtn@free.fr>
 
   * include/cppunit/Portability.h:
